<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joy_vesc</name>
  <version>0.0.1</version>
  <description>Launch package for Joy, VESC Driver, and VESC Speed Calculator</description>
  <maintainer email="your_email@example.com">f2</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>vesc_driver</exec_depend>
  <exec_depend>vesc_speed_calculator</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

