<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map_create</name>
  <version>0.0.0</version>
  <description>Complete mapping system for f1tenth robot</description>
  <maintainer email="f2@todo.todo">f2</maintainer>
  <license>TODO: License declaration</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  
  <!-- Execute dependencies for all included packages -->
  <exec_depend>joy_vesc</exec_depend>
  <exec_depend>odom_bringup</exec_depend>
  <exec_depend>lidar_scan</exec_depend>
  <exec_depend>my_pathfinder</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

