<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_pathfinder</name>
  <version>0.0.0</version>
  <description>Pathfinding and SLAM package for f1tenth</description>
  <maintainer email="f2@todo.todo">f2</maintainer>
  <license>TODO: License declaration</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <exec_depend>slam_toolbox</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

