<?xml version="1.0"?>
<package format="3">
  <name>nav2_bringup_custom</name>
  <version>0.0.1</version>
  <description>Custom bringup launch for Nav2 and robot core drivers.</description>
  <maintainer email="martrakulpheerawit@gmail.com">f2</maintainer>
  <license>Apache-2.0</license>

  <!-- Only exec_depend for runtime, launchable packages -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>joy_vesc</exec_depend>
  <exec_depend>odom_bringup</exec_depend>
  <exec_depend>lidar_scan</exec_depend>
  <exec_depend>robot_bringup</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

