<?xml version="1.0"?>
<package format="3">
  <name>nav2_waypoint_launch</name>
  <version>0.1.0</version>
  <description>Send waypoints to the Nav2 waypoint follower</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

