<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odom_bringup</name>
  <version>1.0.0</version>
  <description>Launch package for odometry system - IMU bridge and Arduino to odom</description>
  <maintainer email="your_email@example.com">f2</maintainer>
  <license>MIT</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>imu_bridge</depend>
  <depend>vesc_ackermann</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

